--- a/app/src/main/res/layout/signup_fragment.xml
+++ b/app/src/main/res/layout/signup_fragment.xml
@@ -7,6 +7,7 @@
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="20dp"
     android:background="#ddffffff"
     android:orientation="vertical">
 
@@ -20,7 +21,8 @@
         <Spinner
             android:id="@+id/spinner"
             android:layout_width="50dp"
-            android:layout_height="50dp" />
+            android:layout_height="50dp"
+            android:backgroundTint="@android:color/black" />
         <EditText
             android:id="@+id/mobileText"
             android:layout_width="250dp"
@@ -66,5 +68,13 @@
         android:inputType="textPassword"
         android:textColor="#000000"
         android:textColorHint="#aa000000" />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="200dp"
+        android:background="#ffdc00"
+        android:text="SIGN UP"
+        android:textColor="@android:color/black"
+        android:textSize="20sp"/>
 </LinearLayout>
 </ScrollView>
