--- a/app/src/main/res/layout/contact_fragment.xml
+++ b/app/src/main/res/layout/contact_fragment.xml
@@ -1,14 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <TextView
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#ddffffff">
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorAccent"
-        android:text="Contact"
-        android:textSize="45dp"/>
+        android:background="#ddffffff"
+        android:orientation="vertical">
+            <EditText
+                android:id="@+id/mobileText"
+                android:layout_width="300dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="20dp"
+                android:layout_gravity="center"
+                android:backgroundTint="#737272"
+                android:hint="Mobile Number"
+                android:textColor="#000000"
+                android:textColorHint="#aa000000" />
 
-</LinearLayout>
+        <EditText
+            android:id="@+id/mailText"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="25dp"
+            android:hint="Email"
+            android:backgroundTint="#737272"
+            android:textColor="#000000"
+            android:textColorHint="#aa000000" />
+
+        <EditText
+            android:id="@+id/nameText"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="25dp"
+            android:hint="Name"
+            android:backgroundTint="#737272"
+            android:textColor="#000000"
+            android:textColorHint="#aa000000" />
+
+        <EditText
+            android:id="@+id/passwordText"
+            android:layout_width="300dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:gravity="start"
+            android:layout_marginTop="25dp"
+            android:hint="Message"
+            android:textColorHint="#aa000000"
+            android:ems="10"
+            android:textColor="#000000"
+            android:background="@drawable/rectangle" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="200dp"
+            android:background="#024e0b"
+            android:text="SEND MESSAGE"
+            android:textColor="@android:color/white"
+            android:textSize="20sp"/>
+    </LinearLayout>
+</ScrollView>
