--- a/app/src/main/res/layout/signin_fragment.xml
+++ b/app/src/main/res/layout/signin_fragment.xml
@@ -55,11 +55,18 @@
             android:layout_marginTop="25dp"
             android:text="Forgot Password?"
             android:textColor="#027415"/>
+        <com.facebook.login.widget.LoginButton
+            android:id="@+id/fb_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="35dp"
+            />
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="307dp"
+            android:layout_marginTop="250dp"
             android:background="#ffdc00"
             android:text="SIGN IN"
             android:textColor="@android:color/black"
